<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ffffff" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="@dimen/fix_width_layout"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:background="#ffffff">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="140dp"
                android:id="@+id/imageView"
                android:src="@drawable/logo"
                android:scaleType="fitCenter"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:inputType="textPersonName"
                android:id="@+id/eNama"
                android:hint="@string/name_hint"
                android:layout_gravity="center_horizontal"
                android:textColorHint="#8f8497"
                android:textColor="#ffffff"
                android:background="@drawable/round_edit"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/name_icon_32"
                android:paddingLeft="10dp"
                android:drawablePadding="10dp"
                android:textSize="@dimen/text_size" />


            <EditText
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:inputType="textEmailAddress"
                android:id="@+id/eEmail"
                android:layout_gravity="center_horizontal"
                android:hint="@string/mail_hint"
                android:textColor="#ffffff"
                android:textColorHint="#8f8497"
                android:background="@drawable/round_edit"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/mail_icon_32"
                android:paddingLeft="10dp"
                android:drawablePadding="10dp"
                android:textSize="@dimen/text_size" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:inputType="phone"
                android:id="@+id/ePhone"
                android:layout_gravity="center_horizontal"
                android:hint="@string/hp_hint"
                android:textColor="#ffffff"
                android:textColorHint="#8f8497"
                android:background="@drawable/round_edit"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/phone_icon_32"
                android:paddingLeft="10dp"
                android:drawablePadding="10dp"
                android:textSize="@dimen/text_size" />

            <AutoCompleteTextView
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:inputType="textAutoComplete|textPersonName|textCapCharacters"
                android:id="@+id/eCity"
                android:layout_gravity="center_horizontal"
                android:hint="@string/city_hint"
                android:textColor="#ffffff"
                android:textColorHint="#8f8497"
                android:background="@drawable/round_edit"
                android:layout_marginBottom="8dp"
                android:drawableLeft="@drawable/map_icon_32"
                android:paddingLeft="10dp"
                android:drawablePadding="10dp"
                android:imeOptions="actionDone"
                android:textSize="@dimen/text_size"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:text="@string/btnnext_cap"
                android:id="@+id/btnReg"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_selector"
                android:textColor="@color/btn_color_selector"
                android:textSize="@dimen/button_text_size" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>